tests/ui/imports/import4.stderr
error[E0432]: unresolved import `crate::b::foo`
  --> $DIR/import4.rs:1:17
   |
LL | mod a { pub use crate::b::foo; }
   |                 ^^^^^^^^^^^^^ no `foo` in `b`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
